finished initial layout and design for all pages.

--- a/client/index.less
+++ b/client/index.less
@@ -17,7 +17,9 @@ form{
   text-align: left;
 
   input.ng-invalid, select.ng-invalid{
-    background-color: RGBA(238, 108, 112, 1);
+    //background-color: #2196f3;
+    background-color: #FF9800;
+    //background-color: RGBA(238, 108, 112, 1);
   }
 }
 
