--- a/client/views/clients/clients.less
+++ b/client/views/clients/clients.less
@@ -11,6 +11,7 @@ tr:active, tr:hover{
   background-size: cover;
   margin: auto;
   margin-top: 20px;
+  border-radius: 10px;
 }
 
 .rug-heading, .rug-body{
@@ -19,6 +20,10 @@ tr:active, tr:hover{
 
 .rug-heading{
   padding-right: 15px;
+}
+
+h4.info{
+  font-weight: normal;
 }
 
 .rug-body{
@@ -42,18 +47,46 @@ tr:active, tr:hover{
 }
 
 .calculator {
+  .bold{
+    font-weight: bold;
+  }
+
+  .left{
+    text-align: left;
+  }
+
+  .right{
+    text-align: right;
+  }
+
+  .good{
+    //--------------ADD COLOR WHEN WORKING CORRECTLY--------------//
+    color: green;
+  }
+
+  .bad{
+    //--------------ADD COLOR WHEN WORKING CORRECTLY--------------//
+    color: red;
+  }
+
+  .today{
+    background-color: #e6e6e6;
+  }
+
+  th{
+    font-size: 1.4em;
+  }
+
   th, td{
     text-align: center;
     vertical-align: bottom;
   }
 
   th:nth-child(1), td:nth-child(1){
-    font-weight: bold;
     width: 5%;
   }
 
   th:nth-child(2), td:nth-child(2){
-    font-weight: bold;
     width: 10%;
   }
 
@@ -62,8 +95,11 @@ tr:active, tr:hover{
   }
 
   th:nth-child(4), td:nth-child(4){
-    color: green;
     width: 8%;
+  }
+
+  td:nth-child(4){
+    text-align: right;
   }
 
   th:nth-child(5), td:nth-child(5){
@@ -79,21 +115,10 @@ tr:active, tr:hover{
   }
 
   th:nth-child(8), td:nth-child(8){
-    color: red;
     width: 8%;
   }
 
   th:nth-child(9), td:nth-child(9){
     width: 8%;
   }
-}
-
-.good{
-  //color: green;
-  font-weight: bold;
-}
-
-.bad{
-  //color: red;
-  font-weight: bold;
 }
