--- a/client/views/schedule/schedule.less
+++ b/client/views/schedule/schedule.less
@@ -24,7 +24,7 @@ h5{
   color: #e51c23;
 }
 
-.btn{
+.btn.schedule{
   margin-bottom: 50px;
 }
 
@@ -33,6 +33,6 @@ label{
   color: #444444;
 }
 
-input[type=text].form-control{
+input[type=text].form-control.therMins{
   width: 80px;
 }
