--- a/client/views/review/review.jade
+++ b/client/views/review/review.jade
@@ -1,34 +1,40 @@
 .row
   .col-xs-3
     h2 Review
+    hr
     .clearfix
-      pre {{tableParams.filter()['discipline'] | json}}
-      pre {{tableParams.filter()['name'] | json}}
-      pre {{tableParams.filter()['therapist'] | json}}
       br
-      button.btn.btn-warning(ng-click="tableParams.sorting({})") Clear Sorting
+      .form-group
+        label Filter by Discipline:
+        select.form-control(ng-model='tableParams.filter()[\'discipline\']', ng-options='tx.discipline as tx.discipline for tx in activeTxs | unique:"discipline"')
+      hr
+      label Clear:
       br
-      button.btn.btn-warning(ng-click="tableParams.filter({})") Clear Filtering
-      button.btn.btn-default(ng-click='toggleArchived()') Archived
-      button.btn.btn-default(ng-click='toggleOpen()') Open
-      select.form-control(ng-model='tableParams.filter()[\'discipline\']', ng-options='tx.discipline as tx.discipline for tx in activeTxs | unique:"discipline"')
-      select.form-control(ng-model='tableParams.filter()[\'name\']', ng-options='tx.temp.client.name as tx.temp.client.name for tx in activeTxs | unique:"temp.client.name"')
-      select.form-control(ng-model='tableParams.filter()[\'temp.therapist\']', ng-options='tx.temp.therapist as tx.temp.therapist for tx in activeTxs | unique:"temp.therapist"')
+      button.btn.btn-success(ng-click="tableParams.sorting({})") Sort
+      button.btn.btn-success(ng-click="tableParams.filter({})") Filter
+      hr
+      label View Tx Type:
+      br
+      button.btn.btn-success(ng-click='toggleOpen()') Open
+      button.btn.btn-success(ng-click='toggleArchived()') Archived
   .col-xs-1
   .col-xs-8
+    h2(ng-show='display === \'open\'') Open Treatments
+    h2(ng-show='display === \'archived\'') Archived Treatments
+    hr
     .row
       table.table(ng-table='tableParams', show-filter='false')
         tr(ng-repeat='tx in $data')
-          td(data-title="'Date'", sortable="'txDate'") {{tx.txDate | date:'M/d/yy'}}
+          td(data-title="'Date'") {{tx.txDate | date:'M/d/yy'}}
           td(data-title="'Room'") {{tx.temp.client.current.room}}
-          td(data-title="'Client'", sortable="'name'", filter="{'name': 'select'}") {{tx.temp.client.name}}
-          td(data-title="'Dis.'", sortable="'discicpline'", filter="{'discipline':'select'}") {{tx.discipline}}
-          td(data-title="'Therapist'", sortable="'temp.therapist'", filter="{'temp.therapist': 'select'}"): input.form-control(type='text', ng-model='tx.temp.therapist', ng-readonly='true')
-          td(data-title="'Note?'"): input(type='checkbox', ng-model='tx.review.isNote')
-          td(data-title="'Mins'"): input.form-control(type='text', ng-model='tx.mins', ng-readonly='tx.review.isMins')
-          td(data-title="'Mins?'"): input(type='checkbox', ng-model='tx.review.isMins')
+          td(data-title="'Client'") {{tx.temp.client.name}}
+          td(data-title="'Dis.'", sortable="'discipline'", filter="{'discipline':'select'}") {{tx.discipline}}
+          td(data-title="'Therapist'") {{tx.temp.therapist}}
+          td(data-title="'Note?'"): input(type='checkbox', ng-model='tx.review.isNote', ng-disabled='tx.isArchived')
+          td(data-title="'Mins'"): input.form-control.small(type='text', ng-model='tx.mins', ng-readonly='tx.review.isMins')
+          td(data-title="'Mins?'"): input(type='checkbox', ng-model='tx.review.isMins', ng-disabled='tx.isArchived')
           td(data-title="'Action'")
             button.btn.btn-danger(type='button', ng-click='del($index)', ng-show='tx.review.isNote === false && tx.review.isMins === false') Delete
             button.btn.btn-warning(type='button', ng-click='save($index)', ng-show='tx.review.isNote === false && tx.review.isMins === true || tx.review.isNote === true && tx.review.isMins === false') Save
-            button.btn.btn-primary(type='button', ng-click='arch($index)', ng-show='tx.review.isNote === true && tx.review.isMins ===true') Archive
-          td(data-title="'Hidden'", sortable="'isActive'", filter="{'isArchived': 'text'}") {{tx.isArchived}}
+            button.btn.btn-primary(type='button', ng-click='arch($index)', ng-show='tx.review.isNote === true && tx.review.isMins === true && tx.isArchived === false') Archive
+            button.btn.btn-warning(type='button', ng-click='unArch($index)', ng-show='tx.isArchived === true') UnArchive
