final push before presentation

--- a/client/views/dashboard/dashboard.jade
+++ b/client/views/dashboard/dashboard.jade
@@ -1,2 +1,13 @@
 .row
-  h3 dashboard
+  .col-xs-2
+  .col-xs-8
+    h2 Welcome!
+    h3 Click the Dashboard tab to:
+    ul
+      li: h4 Add CLIENTS and track their minutes using the RUG calculator.
+      li: h4 Add and Update THERAPIST Information
+      li: h4 SCHEDULE upcoming treatments
+      li: h4 REVIEW past treatments and archive them
+    h3 Don't worry, Runner can manage your RUGs...
+    h3 no matter how long they are.
+  .col-xs-2
