change to minimize files

--- a/client/index.jade
+++ b/client/index.jade
@@ -5,7 +5,7 @@ html(ng-app='runner', lang='en')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title Runner
-    link(href='/vendor/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
+    link(href='/vendor/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
     link(href='/vendor/fontawesome/css/font-awesome.min.css', rel='stylesheet')
     link(href='/vendor/toastr/toastr.css', rel='stylesheet')
     link(href='/vendor/ng-table/ng-table.min.css', rel='stylesheet')
@@ -21,19 +21,19 @@ html(ng-app='runner', lang='en')
         .col-xs-12
           #container(ng-view)
 
-    script(src='/vendor/jquery/dist/jquery.js')
+    script(src='/vendor/jquery/dist/jquery.min.js')
     script(src='/vendor/ng-file-upload/angular-file-upload-shim.min.js')
-    script(src='/vendor/angular/angular.js')
+    script(src='/vendor/angular/angular.min.js')
     script(src='/vendor/ng-file-upload/angular-file-upload.min.js')
-    script(src='/vendor/angular-route/angular-route.js')
-    script(src='/vendor/bootstrap/dist/js/bootstrap.js')
+    script(src='/vendor/angular-route/angular-route.min.js')
+    script(src='/vendor/bootstrap/dist/js/bootstrap.min.js')
     script(src='/vendor/angular-bootstrap/ui-bootstrap-tpls.min.js')
     script(src='/vendor/angular-ui-utils/ui-utils.min.js')
-    script(src='/vendor/underscore/underscore.js')
+    script(src='/vendor/underscore/underscore-min.js')
     script(src='/vendor/ng-table/ng-table.min.js')
-    script(src='/vendor/toastr/toastr.js')
-    script(src='/vendor/localforage/dist/localforage.js')
-    script(src='/vendor/angular-localforage/dist/angular-localForage.js')
+    script(src='/vendor/toastr/toastr.min.js')
+    script(src='/vendor/localforage/dist/localforage.min.js')
+    script(src='/vendor/angular-localforage/dist/angular-localForage.min.js')
     script(src='/config/toastr.js')
     script(src='/index.js')
     script(src='/nav.js')
@@ -51,4 +51,3 @@ html(ng-app='runner', lang='en')
     script(src='/components/factories/treatment.js')
     script(src='/components/factories/rug.js')
     script(src='/components/factories/http-interceptor.js')
-
